# LibAFL

./: .gitignore  Cargo.toml
checker/: check.py  check2.py
fuzzers/ViFuzz/: Cargo.toml  README.md
fuzzers/ViFuzz/jackalope_score/: 30min.csv  bench.csv  exec.py  restart.sh  results.csv  results_2c_7t.csv  results_7t_win.csv  results_non_perr.csv  results_same_7t.csv
fuzzers/ViFuzz/main/: exec.py  restart.sh  results.csv  run.sh
fuzzers/ViFuzz/main/corpus/: 0000219+.exr  poc 2.tiff
fuzzers/ViFuzz/src/: main.rs
fuzzers/ViFuzz/vifuzz_score/: 30min.csv  after 30min.csv  bench.csv  exec.py  restart.sh  results.csv  results_2c_havoc_7t.csv  results_50000c_mopt_7t.csv  results_7t_args.csv  results_7t_final_lose.csv  results_non_perr.csv
fuzzers/binary_only/tinyinst_simple/: Cargo.toml
fuzzers/binary_only/tinyinst_simple/src/: main.rs
libafl/src/monitors/: mod.rs
libafl/src/mutators/: custom.rs
libafl_bolts/src/os/: unix_shmem_server.rs
libafl_tinyinst/: Cargo.toml
libafl_tinyinst/src/: executor.rs
