[package]
name = "ViFuzz"
version = "1.0.0"
edition = "2021"

[dependencies]
libafl = { path = "../../libafl", features = ["introspection"] }
libafl_bolts = { path = "../../libafl_bolts" }
libafl_tinyinst = { path = "../../libafl_tinyinst" }
log = { version = "0.4.22", features = ["release_max_level_info"] }
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.2"
env_logger = "0.11.8"
rand = "0.9.0"

[profile.release]
codegen-units = 1
opt-level = 3
